# drogue-opcua-agent-rust

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yaml
docs/megolm/: README.md
docs/megolm/deploy/: 010-ImageStream.yaml  020-BuildConfig-input.yaml  020-BuildConfig-websocket.yaml  030-Deployment-input.yaml  030-Deployment-websocket.yaml  050-Service.yaml  060-Route.yaml
src/: data.rs  main.rs  middleware.rs  mqtt.rs  opcua.rs  types.rs
src/data/: full.rs  mod.rs
src/opcua/: config.rs  mod.rs
