[package]
name = "drogue-opcua-agent"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
default-run = "drogue-opcua-agent"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
chrono = "0.4"
env_logger = "0.9"
futures = "0.3"
humantime = "2"
humantime-serde = "1"
log = "0.4"
opcua = "0.10"
percent-encoding = "2"
rand = "0.8"
rumqttc = "0.12"
rustls = "0.20"
rustls-native-certs = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"
serde_yaml = "0.8"
tokio = "1"

vodozemac = { version = "0.1", optional = true }

[patch.crates-io]
#opcua = { path = "../opcua/lib" }
opcua = { git = "https://github.com/ctron/opcua", rev = "074af25c172365e3779d1a4f199bc5b0d6d94483" }
#opcua = { git = "https://github.com/lovasoa/opcua", branch = "fix-zombie-tasks" }

vodozemac = { git = "https://github.com/matrix-org/vodozemac", rev = "13414b3b1737755562adc00602f6a1809e404f85" } # FIXME: awaiting release with megolm

[profile.release]
debug = 1

[features]
default = ["megolm"]
opcua_0_11 = []
megolm = ["vodozemac"]

[[bin]]
name = "megolmctl"
required-features = ["megolm"]
